--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -17,17 +17,17 @@ body {
   font-size: 22px;
 }
 
+button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
+}
+
 button.confirm {
   background: green;
   color: white;
   font-weight: bold;
 } 
-
-button.cancel {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
 
 div.text {
   color: rgb(0, 0, 0);
@@ -35,7 +35,7 @@ div.text {
   font-weight: 100;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
